--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/* ELEMENT STYLES */
+
 * {
     box-sizing: border-box;
 }
@@ -50,6 +52,12 @@ div.info-row {
     margin-left: 5px;
 }
 
+/* TEXT STYLES */
+
+h1 {
+    padding: 0px 5px ;
+}
+
 h1, h2 , h3 {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
@@ -60,8 +68,12 @@ h1, h2 , h3 {
   margin-top: 5px;
 }
 
-#profile-pic {
-    max-width: 86.66px;
+.title {
+    text-align: left;
+}
+
+.release-year {
+    padding-top: 2px;
 }
 
 #error-message {
@@ -82,16 +94,14 @@ div.info-row > h3, p {
     margin-top: 5px;
 }
 
+/* IMAGE STYLES */
+#profile-pic {
+    max-width: 86.66px;
+}
+
 #broken-image-format, .poster {
     display: block;
     width: 100px;
     height: 144px;
 }
 
-.title {
-    text-align: left;
-}
-
-.release-year {
-    padding-top: 2px;
-}
