--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ div.footer-div {
 .wrapper {
      display: flex;
      flex-direction: column;
-     justify-content: center;
+     justify-content: flex-start;
      height: 100%;
      align-items: center;
      padding: 0px 10px;
@@ -89,7 +89,7 @@ li.movie-display {
     flex-direction: row;
     max-width: 800px;
     margin-bottom: 40px;
-    padding: 10px 10px;
+    padding: 10px 15px;
     background-color: #EFF2F1;
     box-shadow: 1px 1px 5px #389478;
 
@@ -223,3 +223,17 @@ a:active {
     color: rgb(70, 70, 70);
     
 }
+
+@media all and (min-width: 800px) {
+    header.homescreen {
+        height: 1000px;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        align-items: center;
+        padding: 0px 10px;
+    }
