--- a/main.css
+++ b/main.css
@@ -25,16 +25,57 @@ billyargel.blogspot.com*?
     box-sizing: border-box;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    height: 100%;
+    align-items: center;
+    padding: 0px 10px;
+}
+
+.sticky-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 100%;
+    align-items: center;
+    padding: 0px 10px;
+}
+
+.sticky-actor-profile {
+    display: flex;
+    flex-direction: row;
+}
+
+.display-name-sticky {
+    padding-left: 5px;
+    padding-top: 50px;
+}
+
 header {
     background-color: #6D9DC5;
+}
+
+header.sticky {
+    width: 100%;
+    position: fixed;
+    height: 131.5px;
 }
 
 header.homescreen {
     height: 1000px;
 }
 
+#header-placeholder {
+    width: 100%;
+    height: 457px;
+    background-color:#6D9DC5;
+}
+
 main {
     background-color: #97D8C4;
+    min-height: 615px;
 }
 
 footer {
@@ -45,14 +86,6 @@ div.footer-div {
     padding-bottom: 10px;
 }
 
-.wrapper {
-     display: flex;
-     flex-direction: column;
-     justify-content: flex-start;
-     height: 100%;
-     align-items: center;
-     padding: 0px 10px;
- }
 
 .section {
     display: flex;
@@ -60,6 +93,12 @@ div.footer-div {
     align-items: center;
     padding-bottom: 30px;
     
+}
+
+.search-element {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 input {
@@ -241,3 +280,19 @@ a:active {
     .hidden {
         display: none;
     }
+
+    .sticky-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 100%;
+        align-items: center;
+        padding: 0px 10px;
+    }
+}
+
+@media all and (max-width: 530px) {
+    h2 {
+        text-align: left;
+    }
+}
