--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ billyargel.blogspot.com*?
 
 header {
     background-color: #6D9DC5;
+    width: 100%;
 }
 
 header.sticky {
@@ -77,6 +78,7 @@ header.homescreen {
 main {
     background-color: #97D8C4;
     min-height: 615px;
+    width: 100%;
 }
 
 footer {
@@ -264,6 +266,8 @@ a:active {
     
 }
 
+/* SCREEN SIZE RESPONSIVENESS */
+
 @media all and (min-width: 800px) {
     header.homescreen {
         height: 1000px;
@@ -297,3 +301,38 @@ a:active {
         text-align: left;
     }
 }
+
+@media all and (max-width: 450px) {
+    h2 {
+        margin-bottom: 10px ;
+    }
+
+    header.sticky {
+        width: 100%;
+        position: fixed;
+        height: 137px;
+    }
+
+    #submit {
+        margin-top: 5px;
+    }
+
+    .sticky-actor-profile {
+        margin-top: 5px;
+    }
+
+    #header-placeholder {
+        width: 100%;
+        height: 462.5px;
+        background-color:#6D9DC5;
+    }
+    
+}
+
+@media all and (max-width: 375px) {
+    .sticky-actor-profile {
+        display: none;
+    }
+
+}
+
